attempt to fix scroll on mobile

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,7 +2,7 @@
     background: fixed;
     background: linear-gradient(150deg, rgb(255, 255, 255), rgb(242, 211, 165));
     height: 100dvh;
-    overflow-y: scroll;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
