--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -21,6 +21,6 @@
 @media (max-width: 768px) {
   .menuContainer {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 2fr;
   }
 }
